k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rawdb
  namespace: rawdb
  labels:
    app: rawdb
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: metrics
      port: 9090
      targetPort: 9090
  selector:
    app: rawdb
